fix alignment

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -342,10 +342,11 @@ span.clock_credits {
 	opacity: 50%;
 	padding-left: 5px;
 	padding-right: 5px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	position: fixed;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	position: absolute;
 	bottom: 0;
+	right: 0;
 	font-size: 11px;
 	margin: 0;
 }
